// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with nothing selected 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  margin-bottom: clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  box-sizing: border-box;
  position: relative;
  width: calc(clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem) + 2 * (clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem) + 1px));
  height: calc(clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem) + 2 * (clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem) + 1px));
  border-radius: 50%;
  padding: clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem);
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.emotion-4 {
  box-sizing: border-box;
  width: clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem);
  height: clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  border-radius: 50%;
  -webkit-transition: -webkit-transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  transition: transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.emotion-6 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: 0;
  margin-left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
}

.emotion-6 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-6 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <div
    class="emotion-0"
    role="radiogroup"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        role="radio"
      >
        <div
          class="emotion-3"
          data-testid="pbl-radio"
        >
          <div
            class="emotion-4"
            data-testid="pbl-radio-handle"
          />
          <input
            class="emotion-5"
            data-testid="pbl-radio-input"
            id="custom-id-1"
            name="greeting"
            type="radio"
            value="hello"
          />
        </div>
        <label
          class="emotion-6"
          data-testid="pbl-radio-label"
          for="custom-id-1"
        >
          Hello
        </label>
      </div>
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        role="radio"
      >
        <div
          class="emotion-3"
          data-testid="pbl-radio"
        >
          <div
            class="emotion-4"
            data-testid="pbl-radio-handle"
          />
          <input
            class="emotion-5"
            data-testid="pbl-radio-input"
            id="custom-id-2"
            name="greeting"
            type="radio"
            value="world"
          />
        </div>
        <label
          class="emotion-6"
          data-testid="pbl-radio-label"
          for="custom-id-2"
        >
          World
        </label>
      </div>
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        role="radio"
      >
        <div
          class="emotion-3"
          data-testid="pbl-radio"
        >
          <div
            class="emotion-4"
            data-testid="pbl-radio-handle"
          />
          <input
            class="emotion-5"
            data-testid="pbl-radio-input"
            id="custom-id-3"
            name="greeting"
            type="radio"
            value="bye"
          />
        </div>
        <label
          class="emotion-6"
          data-testid="pbl-radio-label"
          for="custom-id-3"
        >
          Bye
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Work with one radio button 1`] = `
.emotion-0 {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  margin-bottom: clamp(0.75rem, 0.6428571428571428rem + 0.5357142857142857vw, 1.125rem);
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  box-sizing: border-box;
  position: relative;
  width: calc(clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem) + 2 * (clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem) + 1px));
  height: calc(clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem) + 2 * (clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem) + 1px));
  border-radius: 50%;
  padding: clamp(0.25rem, 0.17857142857142858rem + 0.35714285714285715vw, 0.5rem);
  background-color: var(--pbl-theme-colors-common-white);
  border: 1px solid var(--pbl-theme-colors-borders-main);
  opacity: 1;
  -webkit-transition: box-shadow 0.3s ease-in-out;
  transition: box-shadow 0.3s ease-in-out;
}

.emotion-4 {
  box-sizing: border-box;
  width: clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem);
  height: clamp(0.75rem, 0.5357142857142857rem + 1.0714285714285714vw, 1.5rem);
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  border-radius: 50%;
  -webkit-transition: -webkit-transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  transition: transform 0.15s cubic-bezier(0.34, 1.56, 0.64, 1);
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-5 {
  box-sizing: border-box;
  position: absolute;
  display: block;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  cursor: pointer;
}

.emotion-6 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  font-style: normal;
  margin: 0;
  line-height: var(--pbl-theme-typography-body-lineHeight);
  font-size: var(--pbl-theme-typography-body-fontSize);
  margin-bottom: var(--pbl-theme-typography-body-marginBottom);
  margin-bottom: 0;
  margin-left: clamp(0.5rem, 0.4285714285714286rem + 0.35714285714285715vw, 0.75rem);
}

.emotion-6 variants bold {
  font-weight: var(--pbl-theme-typography-body-variants-bold-fontWeight);
}

.emotion-6 variants small {
  font-size: var(--pbl-theme-typography-body-variants-small-fontSize);
}

<div>
  <div
    class="emotion-0"
    role="radiogroup"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
        role="radio"
      >
        <div
          class="emotion-3"
          data-testid="pbl-radio"
        >
          <div
            class="emotion-4"
            data-testid="pbl-radio-handle"
          />
          <input
            class="emotion-5"
            data-testid="pbl-radio-input"
            id="custom-id"
            name="greeting"
            type="radio"
            value="hello"
          />
        </div>
        <label
          class="emotion-6"
          data-testid="pbl-radio-label"
          for="custom-id"
        >
          Hello
        </label>
      </div>
    </div>
  </div>
</div>
`;
